function(add_unit_test name)
  set(test_name ${name}-test)
  add_executable(${test_name} ${name}.cpp)
  add_dependencies(${test_name} katana_disable_dlclose)
  target_link_libraries(${test_name} PRIVATE "-ldl")
  set(command_line "$<TARGET_FILE:${test_name}>")
  add_test(NAME ${test_name} COMMAND ${command_line})
  set_common_katana_test_options(${test_name})
endfunction()

add_unit_test(no_module_unload)
