add_subdirectory(betweennesscentrality)
add_subdirectory(bfs)
add_subdirectory(bipart)
add_subdirectory(spanningtree)
add_subdirectory(louvain_clustering)
add_subdirectory(connected-components)
add_subdirectory(gmetis)
add_subdirectory(independentset)
add_subdirectory(jaccard)
add_subdirectory(k-core)
add_subdirectory(k-truss)
add_subdirectory(matching)
add_subdirectory(matrixcompletion)
add_subdirectory(pagerank)
add_subdirectory(pointstoanalysis)
add_subdirectory(preflowpush)
add_subdirectory(sssp)
add_subdirectory(triangle-counting)
add_subdirectory(k-shortest-simple-paths)
add_subdirectory(k-shortest-paths)
add_subdirectory(random-walk)
